Tue Oct 20 10:35:57 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_string.cpp:
          Reformatted returned string in emulated strsignal.
          If signum is invalid, "Unknown signal %d" is used to
          format the string. Otherwise, "Signal %d" is used.

          Use ACE_SYS_SIGLIST instead of ACE_HAS_SYS_SIGLIST.

        * ace/config-lynxos.h:
          Removed ACE_HAS_SYS_SIGLIST. Macro is no longer used.

Mon Oct 19 20:58:10 UTC 2009  Olli Savia  <ops@iki.fi>

        * configure.ac:
        * m4/config_h.m4:
          Added a check for strsignal.

Mon Oct 19 20:24:54 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/README:
        * ace/config-cray.h:
        * ace/config-cygwin32.h:
        * ace/config-hpux-11.00.h:
        * ace/config-lynxos.h:
        * ace/config-netbsd.h:
        * ace/config-openbsd.h:
        * ace/config-rtems.h:
        * configure.ac:
        * m4/config_h.m4:
          ACE_HAS_SYS_ERRLIST is no longer in use.

Mon Oct 19 19:25:40 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/README:
        * ace/config-aix-5.x.h:
        * ace/config-cray.h:
        * ace/config-cygwin32.h:
        * ace/config-freebsd.h:
        * ace/config-hpux-11.00.h:
        * ace/config-integritySCA.h:
        * ace/config-irix6.x-common.h:
        * ace/config-linux-common.h:
        * ace/config-lynxos.h:
        * ace/config-macosx-leopard.h:
        * ace/config-macosx-panther.h:
        * ace/config-macosx-tiger.h:
        * ace/config-macosx.h:
        * ace/config-mvs.h:
        * ace/config-netbsd.h:
        * ace/config-openbsd.h:
        * ace/config-openvms.h:
        * ace/config-qnx-neutrino.h:
        * ace/config-qnx-rtp-62x.h:
        * ace/config-qnx-rtp-pre62x.h:
        * ace/config-rtems.h:
        * ace/config-sco-5.0.0.h:
        * ace/config-sunos5.4-g++.h:
        * ace/config-sunos5.4-sunc++-4.x.h:
        * ace/config-sunos5.5.h:
        * ace/config-tandem-nsk-mips-v2.h: